samples/_failures_safe/1761078359_5105dc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b14cf0bc.c: In function ‘main’:
./samples/SAFE/__tmp_b14cf0bc.c:162:25: error: missing terminating " character
  162 |         fprintf(stderr, "Empty
      |                         ^~~~~~
./samples/SAFE/__tmp_b14cf0bc.c:162:9: error: expected expression at end of input
  162 |         fprintf(stderr, "Empty
      |         ^~~~~~~
./samples/SAFE/__tmp_b14cf0bc.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b14cf0bc.c:162:9: error: expected declaration or statement at end of input
